Reset the last known mouse mousing on MouseLeave

Reset the last known mouse position to be unknown when we get a mouse
leave or when the target of an iframe changes.

BUG=788690

Change-Id: Ib0c6ab3281b1bcdd5401fd51004c4f3e5a1c04b6
Reviewed-on: https://chromium-review.googlesource.com/814696
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522877}
Former-commit-id: 3759ce9f7db0a23f57ca007cf6247cead49c867c